src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>AVSFQB__COGS__c</fullName>
        <description>Cost of goods sold</description>
        <label>COGS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AVSFQB__OnHand__c</fullName>
        <label>OnHand</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVSFQB__QB_Error__c</fullName>
        <label>QB Error</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AVSFQB__QuickBooks_ItemType__c</fullName>
        <label>QuickBooks Item Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ItemService</fullName>
                    <default>true</default>
                    <label>ItemService</label>
                </value>
                <value>
                    <fullName>ItemNonInventory</fullName>
                </value>
                <value>
                    <fullName>ItemOtherCharge</fullName>
                </value>
                <value>
                    <fullName>ItemInventory</fullName>
                </value>
                <value>
                    <fullName>ItemInventoryAssembly</fullName>
                </value>
                <value>
                    <fullName>ItemDiscount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AVSFQB__Quickbooks_Id__c</fullName>
        <externalId>true</externalId>
        <label>Quickbooks Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>B2B</fullName>
                </value>
                <value>
                    <fullName>Education Services</fullName>
                </value>
                <value>
                    <fullName>RCFE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Woo_Product_ID__c</fullName>
        <label>Woo Product ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.SKU</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>